--- a/src/Presentation/SmartStore.Web/Administration/Views/Import/Create.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Import/Create.cshtml
@@ -5,7 +5,7 @@
 	ViewBag.Title = title;
 }
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Create", "Import", new { area = "Admin" }))
 {
 	<fieldset>
 		<div class="section-header">
