--- a/src/Presentation/SmartStore.Web/Administration/Views/Import/ProfileImportResult.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Import/ProfileImportResult.cshtml
@@ -5,7 +5,7 @@
 }
 <div>
 	<span>@T("Admin.Common.TotalRows"):</span> <span class="muted">@Model.TotalRecords</span> &middot;
-	<span>@T("Admin.Common.Processed"):</span> <span class="muted">@Model.AffectedRecords</span>
+	<span>@T("Admin.Common.Skipped"):</span> <span class="muted">@Model.SkippedRecords</span>
 </div>
 <div>
 	<span>@T("Admin.Common.NewRecords"):</span> <span class="muted">@Model.NewRecords</span> &middot;
