PayPal Direct and Express: Option for API security protocol (TLS 1.2 required)

--- a/src/Plugins/SmartStore.PayPal/Views/PayPalDirect/Configure.cshtml
+++ b/src/Plugins/SmartStore.PayPal/Views/PayPalDirect/Configure.cshtml
@@ -34,6 +34,14 @@
                 @Html.DropDownListFor(model => model.TransactMode, Model.TransactModeValues)
             </td>
         </tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.SecurityProtocol)
+			</td>
+			<td class="adminData">
+				@Html.DropDownListFor(model => model.SecurityProtocol, Model.AvailableSecurityProtocols, T("Common.Unspecified"))
+			</td>
+		</tr>
         <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.UseSandbox)
