--- a/src/Presentation/SmartStore.Web/Views/Filter/Products.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Filter/Products.cshtml
@@ -69,7 +69,7 @@ else
 
 	@FilterGroup(Model.Context.Criteria.Where(c => c.Entity.IsCaseInsensitiveEqual("Manufacturer")), T("Products.Manufacturer"), true)
 
-	foreach (var grp in Model.Context.Criteria.Where(c => c.Entity.IsCaseInsensitiveEqual(FilterService.ShortcutSpecAttribute)).GroupBy(c => c.Name).OrderBy(g => g.Key))
+	foreach (var grp in Model.Context.Criteria.Where(c => c.Entity.IsCaseInsensitiveEqual(FilterService.ShortcutSpecAttribute)).GroupBy(c => c.Name))
 	{
 		var first = grp.FirstOrDefault();
 		bool isActive = (Model.Context.Criteria.FirstOrDefault(c => c.Entity.IsCaseInsensitiveEqual(FilterService.ShortcutSpecAttribute) && c.Name.IsCaseInsensitiveEqual(grp.Key) && !c.IsInactive) != null);
