--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
@@ -30,7 +30,10 @@
             $("#@Html.FieldIdFor(model => model.ProductSearchAutoCompleteEnabled)").click(toggleProductSearchAutoComplete);
             $("#@Html.FieldIdFor(model => model.CompareProductsEnabled)").click(toggleCompareProducts);
         	$("#@Html.FieldIdFor(model => model.EnableHtmlTextCollapser)").click(toggleHtmlTextCollapsedHeight);
-        	$("#@Html.FieldIdFor(model => model.FilterEnabled)").click(toggleFilterEnabled);
+
+        	$("#@Html.FieldIdFor(model => model.FilterEnabled)").change(function () {
+        		$('#ProductFilterTable').find('.product-filter-option').toggle($(this).is(':checked'));
+        	}).trigger('change');
 
             toggleShowCategoryProductNumberIncludingSubcategories();
             toggleEmailAFriend();
@@ -43,7 +46,6 @@
             toggleProductSearchAutoComplete();
             toggleCompareProducts();
             toggleHtmlTextCollapsedHeight();
-            toggleFilterEnabled();
             toggleManufacturersOnHomepage();
         });
 
@@ -157,16 +159,6 @@
                 $('#pnlHtmlTextCollapsedHeight').hide();
             }
         }
-
-		function toggleFilterEnabled() {
-			if ($('#@Html.FieldIdFor(model => model.FilterEnabled)').is(':checked')) {
-				$('#pnlMaxFilterItemsToDisplay').show();
-				$('#pnlExpandAllFilterCriteria').show();
-			} else {
-				$('#pnlMaxFilterItemsToDisplay').hide();
-				$('#pnlExpandAllFilterCriteria').hide();
-			}
-		}
     </script>
 	
 	@Html.Action("StoreScopeConfiguration", "Setting")
@@ -434,7 +426,26 @@
 				@Html.ValidationMessageFor(model => model.CategoryBreadcrumbEnabled)
 			</td>
 		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.SubCategoryDisplayType)
+			</td>
+			<td class="adminData">
+				@Html.SettingOverrideCheckbox(model => Model.SubCategoryDisplayType)
+				@Html.DropDownListFor(model => model.SubCategoryDisplayType, Model.AvailableSubCategoryDisplayTypes)
+				@Html.ValidationMessageFor(model => model.SubCategoryDisplayType)
+			</td>
+		</tr>
+	</table>
 
+	<table id="ProductFilterTable" class="adminContent">
+		<tr>
+			<td colspan="2">
+				<div class="admin-config-group">
+					<div class="title">@T("Filtering.FilterResults")</div>
+				</div>
+			</td>
+		</tr>
 		<tr>
 			<td class="adminTitle">
 				@Html.SmartLabelFor(model => model.FilterEnabled)
@@ -444,7 +455,7 @@
 				@Html.ValidationMessageFor(model => model.FilterEnabled)
 			</td>
 		</tr>
-		<tr id="pnlMaxFilterItemsToDisplay">
+		<tr class="product-filter-option">
 			<td class="adminTitle">
 				@Html.SmartLabelFor(model => model.MaxFilterItemsToDisplay)
 			</td>
@@ -453,7 +464,7 @@
 				@Html.ValidationMessageFor(model => model.MaxFilterItemsToDisplay)
 			</td>
 		</tr>
-		<tr id="pnlExpandAllFilterCriteria">
+		<tr class="product-filter-option">
 			<td class="adminTitle">
 				@Html.SmartLabelFor(model => model.ExpandAllFilterCriteria)
 			</td>
@@ -462,15 +473,13 @@
 				@Html.ValidationMessageFor(model => model.ExpandAllFilterCriteria)
 			</td>
 		</tr>
-
-		<tr>
+		<tr class="product-filter-option">
 			<td class="adminTitle">
-				@Html.SmartLabelFor(model => model.SubCategoryDisplayType)
+				@Html.SmartLabelFor(model => model.SortFilterResultsByMatches)
 			</td>
 			<td class="adminData">
-				@Html.SettingOverrideCheckbox(model => Model.SubCategoryDisplayType)
-				@Html.DropDownListFor(model => model.SubCategoryDisplayType, Model.AvailableSubCategoryDisplayTypes)
-				@Html.ValidationMessageFor(model => model.SubCategoryDisplayType)
+				@Html.SettingEditorFor(model => model.SortFilterResultsByMatches)
+				@Html.ValidationMessageFor(model => model.SortFilterResultsByMatches)
 			</td>
 		</tr>
 	</table>
