--- a/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.Mobile.cshtml
@@ -27,9 +27,9 @@
             <div class="message-error">
                 <ul>
                     @for (int i = 0; i < Model.Warnings.Count; i++)
-                    {
-                        <li>@Model.Warnings[i]</li>
-                    }
+					{
+						<li>@Html.Raw(Model.Warnings[i])</li>
+					}
                 </ul>
             </div>
             }
