--- a/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
@@ -76,7 +76,7 @@
 							<ul>
 								@for (int i = 0; i < Model.Warnings.Count; i++)
 								{
-									<li>@Model.Warnings[i]</li>
+									<li>@Html.Raw(Model.Warnings[i])</li>
 								}
 							</ul>
 						</div>
