Import column mapping: Less restrictive column versus entity property comparing

--- a/src/Presentation/SmartStore.Web/Administration/Views/Import/_ColumnMappings.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Import/_ColumnMappings.cshtml
@@ -102,8 +102,7 @@
 						</select>
 					</td>
 					<td>
-						<input type="text" name="ColumnMapping.Default.@(index)" class="mapping-control-default text-box single-line" value="@mapping.Default" 
-							   @(mapping.Column.HasValue() ? "" : "disabled='disabled'") style="width: 97%;" />
+						<input type="text" name="ColumnMapping.Default.@(index)" class="mapping-control-default text-box single-line" value="@mapping.Default" style="width: 97%;" />
 					</td>
 					<td>
 						<button type="button" class="btn btn-block btn-danger mapping-button-delete">
