Replaced ugly GIF spinners with cute animated SVG spinner

--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/mixins.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/mixins.less
@@ -194,6 +194,13 @@
 /* Flexbox Extras
 ----------------------------------------*/
 
+.display-flex() {
+    display: -webkit-flex;
+    display: -webkit-box; 
+    display: -ms-flexbox; 
+    display: flex;
+}
+
 .flex-center() {
     -webkit-align-items:       center; 
     -webkit-box-align:         center; 
