--- a/src/Presentation/SmartStore.Web/Content/install/install.less
+++ b/src/Presentation/SmartStore.Web/Content/install/install.less
@@ -66,6 +66,7 @@
 @import "~/Content/bootstrap/progress-bars.less";
 
 // (MC) extra 3rd party or own components
+@import "~/Content/bootstrap/custom/spinner.less";
 @import "~/Content/bootstrap/custom/throbber.less";
 
 // (MC) extra tweaks and corrections
