--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/EstimateShipping.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/EstimateShipping.cshtml
@@ -12,7 +12,7 @@
 
                 var throbber = estimateBox.data("throbber");
                 if (!throbber) {
-                    throbber = estimateBox.throbber({ white: true, small: true, show: false }).data("throbber");
+                    throbber = estimateBox.throbber({ white: true, small: true, message: '', show: false }).data("throbber");
                 }
                 throbber.show();
 
