--- a/src/Presentation/SmartStore.Web/Administration/Content/theme.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/theme.less
@@ -64,6 +64,7 @@
 
 
 // (MC) extra 3rd party or own components
+@import "~/Content/bootstrap/custom/spinner.less";
 @import "~/Content/bootstrap/custom/throbber.less";
 @import "~/Content/bootstrap/custom/select2.less";
 @import "~/Content/bootstrap/custom/datetimepicker.less";
